--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -1,3 +1,3 @@
 \documentclass[justified]{tufte-exam}
-\author{Abhinav Chaturvedi}
-\publisher{AFBBS, Lodhi Road}
+\author{Harry Potter}
+\publisher{Hogwarts School of Magic}
