Corrected call for picking up .table

--- a/maths/math-06/question.tex
+++ b/maths/math-06/question.tex
@@ -6,7 +6,7 @@ $x\in [0,2]$ and $y\in [0,2]$. What is the probability that $x^2+y^2\leq 1$?
   \begin{marginfigure}
     \begin{tikzpicture}[>=latex] 
        \drawaxis{-2.5}{2.5}{-2.5}{2.5} ; 
-       \draw[thick] plot[smooth] file{q6/circle.table} ;
+       \draw[thick] plot[smooth] file{circle.table} ;
        \draw[thick] (0,2) -- (2.5,2) node[right] {$y=2$} ;
        \draw[thick] (2,0) -- (2,2.5) node[right] {$x=2$} ;
 
