--- a/maths/math-02/question.tex
+++ b/maths/math-02/question.tex
@@ -6,7 +6,7 @@
          \begin{tikzpicture}[>=latex]
             \drawaxis{-0.5}{4.5}{-0.5}{3} ;
             \draw[dashed] (4,-0.5) -- (4,3) node[right]{$x=4$} ; 
-            \draw[color=black!70,thick] plot[smooth] file{../../q3/curve.table} ;
+            \draw[color=black!70,thick] plot[smooth] file{curve.table} ;
       
             % Label some nodes 
             \path (0,0) node[below left]{$(0,0)$} ;
