Defined new naming convention for (generated) .table files
Henceforth, .table files will have a name of the form
<subject-first-letter><index>_<table-#-in-gnuplot-file>.

For example, a table in maths/math-01 would be called 'm01_1.table'

--- a/maths/math-02/question.tex
+++ b/maths/math-02/question.tex
@@ -6,7 +6,7 @@
          \begin{tikzpicture}[>=latex]
             \drawaxis{-0.5}{4.5}{-0.5}{3} ;
             \draw[dashed] (4,-0.5) -- (4,3) node[right]{$x=4$} ; 
-            \draw[color=black!70,thick] plot[smooth] file{curve.table} ;
+            \draw[color=black!70,thick] plot[smooth] file{m02_1.table} ;
       
             % Label some nodes 
             \path (0,0) node[below left]{$(0,0)$} ;
