--- a/maths/math-04/question.tex
+++ b/maths/math-04/question.tex
@@ -5,9 +5,9 @@ and the curves $\left\{ (x,y): y^2 \leq 4x,\, 4x^2+4y^2\leq 9\right\}$
     \begin{marginfigure} 
       \begin{tikzpicture}[>=latex]
         \drawaxis{-2}{2}{-2}{2} ;
-        \draw[color=black!70,thick] plot[smooth] file{q4/circle.table} ;
-        \draw[color=black!70,thick] plot[smooth] file{q4/pos_root.table} ;
-        \draw[color=black!70,thick] plot[smooth] file{q4/neg_root.table} ;
+        \draw[color=black!70,thick] plot[smooth] file{m04_1.table} ;
+        \draw[color=black!70,thick] plot[smooth] file{m04_2.table} ;
+        \draw[color=black!70,thick] plot[smooth] file{m04_3.table} ;
 
         \path (1.5,2.45) node[right] {$y^2=4x$} ;
         \path (1.1,1.14) node[right] {$4x^2+4y^2=9$} ;
