--- a/maths/math-05/question.tex
+++ b/maths/math-05/question.tex
@@ -5,10 +5,10 @@
   \begin{marginfigure}
     \begin{tikzpicture}[>=latex]
       \drawaxis{-2}{2}{-2}{2} ;
-      \draw[color=black!70,thick] plot[smooth] file{l1.table} ;
-      \draw[color=black!70,thick] plot[smooth] file{l2.table} ;
-      \draw[color=black!70,thick] plot[smooth] file{l3.table} ;
-      \draw[color=black!70,thick] plot[smooth] file{l4.table} ;
+      \draw[color=black!70,thick] plot[smooth] file{m05_1.table} ;
+      \draw[color=black!70,thick] plot[smooth] file{m05_2.table} ;
+      \draw[color=black!70,thick] plot[smooth] file{m05_3.table} ;
+      \draw[color=black!70,thick] plot[smooth] file{m05_4.table} ;
       
       % Draw the lines defined by the curves 
       \path (0.5,-1.5) node[right] {$-x-y=1$} ;
