--- a/maths/math-07/question.tex
+++ b/maths/math-07/question.tex
@@ -15,8 +15,9 @@ $x\in [0,2]$ and $y\in [0,2]$. What is the probability that $x^2+y^2\leq 1$?
        %\path (1.3,1.3) node[above] {$A_2$} ;
     \end{tikzpicture} 
   \end{marginfigure} 
-  \marginnote{This question sounds more complicated than it actually is. Remember,
-  before tackling the unknown, always take stock of what is known}
+  \marginnote{This question sounds more complicated than it is. 
+  The key - as always - is to first build a picture of what is known (or told).
+  And you will then find that subsequent calculations are rarely challenging}
   \marginnote[0.5cm]{Radius R = 1} 
 \fi 
 
