Leave full page for writing solution

--- a/maths/math-05/question.tex
+++ b/maths/math-05/question.tex
@@ -30,7 +30,7 @@
      be enough. But the question requires calculus. So, calculus it is.}
 \fi 
 
-\begin{solution}
+\begin{solution}[\fullpage]
   $\vert x \vert + \vert y \vert = 1 \Rightarrow 
   \begin{cases}
     -x-y=1 & x,y \leq 0 \\ 
