[Big One]: Print customized headers for each student...
Added 2 new commands in tufte-tweaks - \DocAuthor and \School - to specify
who the document author is.

\DocAuthor = Student, if doc is a question paper.
\DocAuthor = Teacher, if doc is the answer key

(xml2Tex) : When generating question papers, remember to add a \DocAuthor clause just
when TeX generation for the next student begins.

--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -1,3 +1,2 @@
 \documentclass[justified]{tufte-exam}
-\author{Harry Potter}
-\publisher{Hogwarts School of Magic}
+\School{Hogwarts School of Magic}
