dummy test commit

--- a/app/views/README
+++ b/app/views/README
@@ -1,3 +1,5 @@
+## Dummy line added to test whether new hierarchy works
+
 
 Listed below are class atributes used in HAML files here
 and the meaning of those attributes : 
